--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,3 @@
 body, html {
-    background-color: #1f1f1f;
+    background: #5D2736;
 }
